<resources>
    <string name="app_name">BloodHub</string>
    <string name="welcome">Welcome to BloodHub!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="input_box_for_first_name">Input box for first name</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="password">Password</string>
    <string name="logo_image_description">Logo image: red heart in hand</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="ready_to_save_lives">Ready to save lives?</string>
    <string name="success">Success!</string>
    <string name="register_success_message">Your account has been successfully created.</string>
    <string name="continue.">Continue</string>
    <string name="success_checkmark_description">A red checkmark illustration.</string>
    <string name="welcome_back">Welcome back!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="centers">Centers</string>
    <string name="appointments">Appointments</string>
    <string name="emergencies">Emergencies</string>
    <string name="profile_picture">Profile picture</string>
    <string name="identification">Identification</string>
    <string name="donation_details">Donation details</string>
    <string name="last_donation">Last donation</string>
    <string name="total_donations">Total donations</string>
    <string name="tap_to_upload_profile_picture">Tap to upload profile picture</string>
    <string name="add">Add</string>
    <string name="pick">Pick</string>
    <string name="schedule_an_appointment">Schedule an Appointment</string>
    <string name="donation_center">Donation Center</string>
    <string name="select_a_donation_center">Select a donation center</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="let_s_make_one">Let\'s make one!</string>
    <string name="no_future_appointments">No Future Appointments</string>
    <string name="show_donation_centers">Show Donation Centers</string>
    <string name="when">When?</string>
    <string name="where">Where?</string>
    <string name="appointment_hour">Appointment Hour</string>
    <string name="log_out">Log Out</string>
    <string name="donation_centers">Donation Centers</string>
    <string name="emergenciesRecycler">Emergencies</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
</resources>