<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/extra_extra_large_200"
            android:layout_height="@dimen/extra_extra_large_200"
            android:contentDescription="@string/logo_image_description"
            android:src="@drawable/new_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_100"
            android:fontFamily="@font/poppins"
            android:text="@string/welcome"
            android:textSize="@dimen/text_125" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_150"
            android:text="@string/login"
            android:textSize="@dimen/text_75" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="@dimen/extra_extra_large_175"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_150"
            android:text="@string/register"
            android:textSize="@dimen/text_75" />
    </LinearLayout>
</FrameLayout>