<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/normal_100"
        android:paddingRight="@dimen/normal_100">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_schedule_an_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_100"
            android:fontFamily="@font/poppins"
            android:text="@string/schedule_an_appointment"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="35dp"
            android:paddingTop="50dp"
            android:text="@string/donation_center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/til_donation_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/select_a_donation_center"
            android:paddingHorizontal="35dp"
            android:textSize="@dimen/text_50" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_appointment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="2dp"
            android:hint="Appointment Date"
            android:paddingTop="@dimen/normal_125"
            android:textSize="12sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_appointment_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:clickable="false"
                android:editable="false"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save_appointment"
            android:layout_width="@dimen/extra_extra_large_175"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/save"
            android:textSize="@dimen/text_75" />

        <Button
            android:id="@+id/btn_cancel_appointment"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>