<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_ready_to_save_lives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_100"
            android:text="@string/ready_to_save_lives"
            android:textSize="@dimen/text_100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/extra_small_100"
            android:layout_marginHorizontal="@dimen/large_100"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_125"
                    android:text="@string/profile_picture"
                    android:textSize="@dimen/text_75"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_pick_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick"
                    android:textSize="@dimen/text_50"
                    app:icon="@drawable/add_box"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_user_profile_picture"
                android:layout_width="@dimen/extra_large_175"
                android:layout_height="@dimen/extra_large_175"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/account_circle"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_100"
            android:layout_marginVertical="@dimen/extra_small_50"
            android:hint="@string/full_name"
            android:textSize="@dimen/text_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_100"
            android:layout_marginVertical="@dimen/extra_small_50"
            android:hint="@string/email"
            android:textSize="@dimen/text_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_100"
            android:layout_marginVertical="@dimen/extra_small_50"
            android:hint="@string/password"
            android:textSize="@dimen/text_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_100"
            android:layout_marginVertical="@dimen/extra_small_50"
            android:hint="@string/gender">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:padding="@dimen/normal_100"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_blood_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_100"
            android:layout_marginVertical="@dimen/extra_small_50"
            android:hint="@string/blood_group">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/spinner_blood_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:padding="@dimen/normal_100"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_100"
            android:layout_marginVertical="@dimen/extra_small_50"
            android:hint="@string/date_of_birth"
            android:textSize="@dimen/text_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:editable="false"
                android:inputType="none"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register_form"
            android:layout_width="@dimen/extra_extra_large_175"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            android:text="@string/register"
            android:textSize="@dimen/text_75" />

    </LinearLayout>

</FrameLayout>