<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/normal_100"
        android:paddingRight="@dimen/normal_100">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_user_profile_picture"
            android:layout_width="@dimen/extra_extra_large_125"
            android:layout_height="@dimen/extra_extra_large_125"
            android:contentDescription="@string/profile_picture"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            tools:src="@drawable/account_circle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_100"
            android:textSize="@dimen/text_100"
            android:textStyle="bold"
            tools:text="User Full Name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/extra_small_25"
            android:layout_marginVertical="@dimen/normal_100"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_100"
            android:text="@string/identification"
            android:textSize="@dimen/text_75"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_100"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_of_birth"
                android:textSize="@dimen/text_75" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_date_of_birth_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_75"
                android:textStyle="bold"
                tools:text="DD/MM/YYYY" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_100"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textSize="@dimen/text_75" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_75"
                android:textStyle="bold"
                tools:text="male/female" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_100"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blood_group"
                android:textSize="@dimen/text_75" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_blood_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_75"
                android:textStyle="bold"
                tools:text="AB+" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="@dimen/extra_extra_large_100"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_100"
            android:background="@drawable/button_background"
            android:text="@string/log_out"
            android:textColor="@drawable/button_text_color"
            android:textSize="@dimen/text_75" />

    </LinearLayout>

</FrameLayout>
